<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginVertical="20dp"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_icon"
        android:id="@+id/login_icon" />

    <LinearLayout
        android:id="@+id/login_greeting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/login_icon"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hello_xml"
            android:textColor="@color/grey"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeback_xml"
            android:textColor="@color/grey"
            android:textSize="40dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_and_pass_layout"
        android:layout_below="@+id/login_greeting_layout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginVertical="20dp">

        <EditText
            android:id="@+id/email_etxml_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_shape"
            android:hint="@string/email_etxml"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/pass_etxml_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_shape"
            android:hint="@string/pass_etxml"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textSize="20dp" />


        <Button
            android:id="@+id/LoginBtnxml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_shape"
            android:paddingHorizontal="10dp"
            android:text="@string/Loginbtn"
            android:textColor="@color/white" />
        <ProgressBar
            android:id="@+id/progressBarxml_loginAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/email_and_pass_layout"
        android:gravity="center">

        <TextView
            android:id="@+id/createAcc_et_xml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/Donthaveaccount_xml"
            android:textColor="@color/dark_grey"
            android:textSize="20dp" />



    </LinearLayout>

</RelativeLayout>